--- a/portfolio_website-STARTER/Dockerfile
+++ b/portfolio_website-STARTER/Dockerfile
@@ -9,9 +9,10 @@ COPY package.json ./
 COPY package-lock.json ./
 RUN npm install
 RUN npm install react-scripts@3.4.1 -g
+RUN npm install -g serve
 
 # add app
 COPY . ./
 
 # start app
-CMD ["npm", "start"]
+CMD ["serve", "-s", "build"]
