--- a/portfolio_website-STARTER/Dockerfile
+++ b/portfolio_website-STARTER/Dockerfile
@@ -1,18 +1,20 @@
-# pull official base image
-FROM node:latest
+FROM node:lts as dependencies
+COPY package.json yarn.lock ./
+RUN yarn install --frozen-lockfile
 
-# set working directory
-WORKDIR /app
+FROM node:lts as builder
+COPY . .
+COPY --from=dependencies /node_modules ./node_modules
+RUN yarn build
 
-# install app dependencies
-COPY package.json ./
-COPY package-lock.json ./
-RUN npm install
-RUN npm install react-scripts@3.4.1 -g
-RUN npm install -g serve
+FROM node:lts as runner
+ENV NODE_ENV production
+# If you are using a custom next.config.js file, uncomment this line.
+# COPY --from=builder /my-project/next.config.js ./
+COPY --from=builder /public ./public
+COPY --from=builder /.next ./.next
+COPY --from=builder /node_modules ./node_modules
+COPY --from=builder /package.json ./package.json
 
-# add app
-COPY . ./
-
-# start app
-CMD ["serve", "-s", "build"]
+EXPOSE 3000
+CMD ["yarn", "start"]
